--- a/01SOURCE/vue/vuell/src/templates/testTree.html
+++ b/01SOURCE/vue/vuell/src/templates/testTree.html
@@ -15,8 +15,8 @@
       <div slot="header" class="clearfix">
         <span class="ll-main-title">查询条件</span>
       </div>
-      <ll-nav-tree :items="data" :props="defaultProps" :datasource="datasource" accordion @node-click="handleNodeClick">
-      </ll-nav-tree>
+      <ll-tree-zz :items="data" :props="defaultProps" :datasource="datasource" accordion @node-click="handleNodeClick">
+      </ll-tree-zz>
     </ll-card>
   </div>
 </body>
