--- a/01SOURCE/vue/vuell/src/templates/testTable.html
+++ b/01SOURCE/vue/vuell/src/templates/testTable.html
@@ -38,25 +38,25 @@
                 </ll-col>
               </ll-row>
             </div>
-            <ll-grid :data-wrap="dataWrap" @current-change="currentChange" @cell-click="testCellClick">
+            <ll-table-zz :data-wrap="dataWrap" @current-change="currentChange" @cell-click="testCellClick">
               <ll-table-column type="selection" width="55">
               </ll-table-column>
-              <ll-grid-column prop="date" type="date" label="日期" :width="180">
-              </ll-grid-column>
-              <ll-grid-column type="select" prop="name" label="姓名" :width="180">
-              </ll-grid-column>
-              <ll-grid-column type="tree" prop="name" label="姓名" :width="180">
-              </ll-grid-column>
-              <ll-grid-column prop="address" label="地址" :width="180">
-              </ll-grid-column>
-              <ll-grid-column :sortable="false" label="地址" :istemplate="true" :width="180">
+              <ll-table-column-zz prop="date" type="date" label="日期" :width="180">
+              </ll-table-column-zz>
+              <ll-table-column-zz type="select" prop="name" label="姓名" :width="180">
+              </ll-table-column-zz>
+              <ll-table-column-zz type="tree" prop="name" label="姓名" :width="180">
+              </ll-table-column-zz>
+              <ll-table-column-zz prop="address" label="地址" :width="180">
+              </ll-table-column-zz>
+              <ll-table-column-zz :sortable="false" label="地址" :istemplate="true" :width="180">
                 <template slot-scope="scope">
                 </template>
                 <template slot="header" slot-scope="scope">
                   <ll-input size="mini" placeholder="输入关键字搜索" />
                 </template>
-              </ll-grid-column>
-            </ll-grid>
+              </ll-table-column-zz>
+            </ll-table-zz>
           </ll-card>
         </ll-main>
       </ll-container>
