--- a/01SOURCE/vue/vuell/src/templates/testDropTree.html
+++ b/01SOURCE/vue/vuell/src/templates/testDropTree.html
@@ -19,7 +19,7 @@
     data: {
       datasource: "http://localhost:8083/web/sys/menu/menu-tree/datalist",
       labelDatasource: "http://localhost:8083/web/sys/menu/label",
-      selectValue:""
+      selectValue:"402"
     },
     methods: {}
   })
