--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/menu/menu.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/menu/menu.html
@@ -19,7 +19,7 @@
 	<form>
 		<ll:filllayout>
 			<ll:fillarealr width="200px">
-				<ll:tree id="treeDemo" datasource="sys/menu/menu-tree/datalist?isHasRoot=true" showLine="true"
+				<ll:tree id="treeDemo" datasource="sys/menu-tree/menus?isHasRoot=true" showLine="true"
 					onnodeclick="zTreeOnClick()"
 				></ll:tree>
 			</ll:fillarealr>
