--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
@@ -94,7 +94,7 @@
             el: '#app',
             data: {
                 dataWrap: dataWrap,
-                datasource: $$pageContextPath + "sys/menu/menu-tree/datalist",
+                datasource: $$pageContextPath + "sys/menu-tree/menus",
                 data: [],
                 defaultProps: {
                     children: 'children',
