--- a/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/assistant/generateEntityOom2.html
+++ b/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/assistant/generateEntityOom2.html
@@ -45,7 +45,7 @@
 								maxlen="10"
 							></ll:formselect>
 							<ll:formdroptree id="cdmcId2" colspan="1" title="下拉框" field="" errmsg="菜单名称不能超过10" maxlen="10"
-								datasource="/sys/menu/menu-tree/datalist?isHasRoot=true"
+								datasource="/sys/menu-tree/menus?isHasRoot=true"
 							></ll:formdroptree>
 						</ll:ajaxform>
 					</ll:fillareatb>
