--- a/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/commonpage/selectMenu.html
+++ b/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/commonpage/selectMenu.html
@@ -20,7 +20,7 @@
 	<form>
 		<ll:filllayout>
 			<ll:fillareatb height="*">
-				<ll:tree id="treeDemo" showcheckbox="false" datasource="/sys/menu/menu-tree/datalist?isHasRoot=true"
+				<ll:tree id="treeDemo" showcheckbox="false" datasource="/sys/menu-tree/menus?isHasRoot=true"
 					showLine="true" onnodeclick="zTreeOnClick()"
 				></ll:tree>
 			</ll:fillareatb>
