--- a/01SOURCE/vue/vuell/src/templates/testCollapse.html
+++ b/01SOURCE/vue/vuell/src/templates/testCollapse.html
@@ -12,7 +12,7 @@
   <div id="app" style="height: 100%;width: 100%;">
     <ll-collapse v-model="activeName" accordion>
       <ll-collapse-item title="一致性 Consistency" name="1" style="height:100%;">
-        <ll-table-zz :data-wrap="dataWrap" style="height:500px;" @current-change="currentChange" @cell-click="testCellClick">
+        <ll-table-zz :data-wrap="dataWrap" style="height:500px;" @current-change="currentChange" @cell-click="testCellClick" :readonly="false">
           <ll-table-column type="selection" width="55">
           </ll-table-column>
           <ll-table-column-zz prop="date" type="date" label="日期" :width="180">
