--- a/01SOURCE/vue/vuell/src/templates/testCollapse.html
+++ b/01SOURCE/vue/vuell/src/templates/testCollapse.html
@@ -12,7 +12,7 @@
   <div id="app" style="height: 100%;width: 100%;">
     <ll-collapse v-model="activeName" accordion>
       <ll-collapse-item title="一致性 Consistency" name="1" style="height:100%;">
-        <ll-table-zz :data-wrap="dataWrap" style="height:500px;" @current-change="currentChange" @cell-click="testCellClick" :readonly="false">
+        <ll-table-zz ref="tablezz" :data-wrap="dataWrap" style="height:500px;" @current-change="currentChange" @cell-click="testCellClick" :readonly="false">
           <ll-table-column type="selection" width="55">
           </ll-table-column>
           <ll-table-column-zz prop="date" type="date" label="日期" :width="180">
@@ -51,31 +51,35 @@
   </div>
 </body>
 <script type="text/javascript">
-  new Vue({
+  var vm = new Vue({
     el: '#app',
     data: {
       activeName: "1",
       inputColumn1: "",
       dataWrap: {
         dataList: [{
+            rowId:1,
             date: "2016-05-02",
             name: "王小虎1",
             address: "上海市普陀区金沙江路 1518 弄",
             editFlag: false
           },
           {
+            rowId:2,
             date: "2016-05-01",
             name: "王小虎",
             address: "上海市普陀区金沙江路 1519 弄",
             editFlag: true
           },
           {
+            rowId:3,
             date: "2016-05-03",
             name: "王小虎",
             address: "上海市普陀区金沙江路 1516 弄",
             editFlag: true
           },
           {
+            rowId:4,
             date: "2016-05-04",
             name: "王小虎",
             address: "上海市普陀区金沙江路 1517 弄",
