--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/index/index.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/index/index.html
@@ -33,7 +33,7 @@
                     </ll-tabs>
                 </ll-main>
             </ll-container>
-            <ll-footer style="height: 25px;">997820126@qq.com</ll-footer>
+            <ll-footer style="height: 25px;background-color:#272b2e;color:#fff;line-height:25px;">997820126@qq.com</ll-footer>
         </ll-container>
     </div>
 
