--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
@@ -2,6 +2,7 @@
 <script th:src="@{/js/vueplugins.js}" charset="utf-8"></script>
 <script th:src="@{/js/framework/jquery-1.12.4.js}" charset="utf-8"></script>
 <script th:src="@{/js/underscore/underscore-min-1.9.1.js}" charset="utf-8"></script>
+<script th:src="@{/js/underscore/underscore-string-min-3.3.4.js}" charset="utf-8"></script>
 <script th:src="@{/js/framework/framework-jquery.js}" charset="utf-8"></script>
 <script th:src="@{/js/framework/framework-model.js}"\ charset="utf-8"></script>
 <script th:src="@{/js/framework/framework-model-context.js}" charset="utf-8"></script>
