--- a/01SOURCE/vue/vuell/src/templates/testTable.html
+++ b/01SOURCE/vue/vuell/src/templates/testTable.html
@@ -38,7 +38,8 @@
                 </ll-col>
               </ll-row>
             </div>
-            <ll-table-zz :data-wrap="dataWrap" @current-change="currentChange" @cell-click="testCellClick">
+            <ll-table-zz :data-wrap="dataWrap" @current-change="currentChange" 
+              @cell-click="testCellClick">
               <ll-table-column type="selection" width="55">
               </ll-table-column>
               <ll-table-column-zz prop="date" type="date" label="日期" :width="180">
