--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
@@ -15,3 +15,8 @@
 	var $$pageContextPath = [[@{/}]];
 	var ajaxResponse=new _LL_Model.AjaxResponse([[${LLAjaxResponse}]]);
 </script>
+<style>
+    [v-cloak] {
+        display: none;
+    }
+</style>
